# notesapp

./: db.sqlite3  pyproject.toml
api/: urls.py  views.py
api/migrations/: 0001_initial.py
mynotes/: settings.py
