[tool.poetry]
name = "notesapp"
version = "0.1.0"
description = ""
authors = ["guilherme <guilherme.rezende@redacaonline.com.br>"]

[tool.poetry.dependencies]
python = "3.10.12"
Django = "^4.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
